fix: 追加APIおよび更新APIにおいて、DBで再SELECTした最新レコード内容を返すように修正　また、N+1クエリ問題を改善